completed Palindrome app

--- a/TacoCatMVC/Views/Home/Reverse.cshtml
+++ b/TacoCatMVC/Views/Home/Reverse.cshtml
@@ -22,7 +22,7 @@
                     </div>
 
                 </form>
-                <h2 class="mt-3">Palindrome Results</h2>
+                <h2 class="mt-3">@Model.Message</h2>
                 <div class="alert alert-success  fade show" id="alert" role="alert">
 
                     <p id="result">@Model.RevWord</p>
